<resources>
    <string name="app_name">NeosoftAssignmentProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="neo_store">NeoSTORE</string>
    <string name="fName">First name</string>
    <string name="login">login</string>
    <string name="regr">Register</string>
    <string name="lname">Last Name</string>
    <string name="user_name">UserName</string>
    <string name="email">Email</string>
    <string name="Pwd">Password</string>
    <string name="conf_Pwd">Confirm Password</string>
    <string name="mobile">Phone number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="req">Required</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="dont_have_account">DONT HAVE AN ACCOUNT?</string>
    <string name="i_agree">I agree the Terms &amp; Conditions</string>
    <string name="my_cart">My Cart</string>
    <string name="tables">Tables</string>
    <string name="sofas">Sofas</string>
    <string name="chairs">Chairs</string>
    <string name="cupboards">Cupboards</string>
    <string name="my_account">My Account</string>
    <string name="store_locator">Store Locator</string>
    <string name="my_order">My Order</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description">Description</string>
    <string name="enter_qty">Enter Qty</string>
    <string name="address">Address</string>
    <string name="landmark">landmark</string>
    <string name="city">city</string>
    <string name="state">state</string>
    <string name="zip_code">zip code</string>
    <string name="save_address">save address</string>
    <string name="country">Country</string>

    <string-array name="quatity_dropdown">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>


    </string-array>
</resources>