<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/myCartFragment"
    android:icon="@drawable/shopping_cart"
    android:title="@string/my_cart"></item>

    <item
        android:id="@+id/tableFragment"
        android:icon="@drawable/table"
        android:title="@string/tables"></item>


    <item
        android:id="@+id/sofaFragment"
        android:icon="@drawable/sofa"
        android:title="@string/sofas"></item>

    <item
        android:id="@+id/chairsFragment"
        android:icon="@drawable/chair"
        android:title="@string/chairs"></item>

    <item
        android:id="@+id/BedsFragment"
        android:icon="@drawable/cupboard"
        android:title="Beds"></item>


    <item
        android:id="@+id/myAccountFragment"
        android:icon="@drawable/user_icon"
        android:title="@string/my_account"></item>

    <item
        android:id="@+id/myStoreMapsFragment"
        android:icon="@drawable/storelocator_icon"
        android:title="@string/store_locator"></item>

    <item
        android:id="@+id/myOrderFragment"
        android:icon="@drawable/myorders_icon"
        android:title="@string/my_order"></item>

    <item
        android:id="@+id/logoutDialogFragment"
        android:icon="@drawable/logout_icon"
        android:title="@string/logout"></item>




</menu>