<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="loginViewModel"
        type="com.example.neosoftassignmentproject.viewmodels.LoginViewmodel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg"
        tools:context=".views.LoginFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100px"
            app:boxStrokeColor="@color/grey"
            app:helperText="@string/req"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            android:textColorHint="@color/white"
            app:startIconDrawable="@drawable/user_icon"
            app:startIconTint="@color/white"
            android:layout_marginTop="148px"
            android:layout_marginEnd="100px"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.email}"
                android:textSize="54px" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100px"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100px"
            app:helperText="@string/req"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"
            app:boxStrokeColor="@color/grey"
            android:textColorHint="@color/white"
            app:startIconDrawable="@drawable/password_icon"
            app:startIconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:passwordToggleEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Pwd"
                android:text="@={loginViewModel.pwd}"
                android:inputType="textPassword"
                android:textSize="54px" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100px"
            android:layout_marginTop="100px"
            android:layout_marginEnd="100px"
            android:background="@drawable/btn_bg"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/neo_store"
            android:textColor="@color/white"
            android:textSize="135px"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65px"
            android:text="@string/forgot_pwd"
            android:textSize="54px"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:text="@string/dont_have_account"
            android:textColor="@color/white"
            android:textSize="48px"
            android:fontFamily="@font/gotham_medium"
            android:layout_marginStart="40px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/add_account_img"
            android:layout_width="138px"
            android:layout_height="138px"
            android:layout_marginEnd="40px"
            android:layout_marginBottom="35dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/plus" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>