<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.neosoftassignmentproject.viewmodels.AddAdressViewModel" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".AddAddressFragment">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/address"
            android:fontFamily="@font/gotham_medium"
            android:textColor="#333333"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:background="@drawable/btn_bg"
            android:layout_height="wrap_content"
            android:minHeight="120dp"
            android:imeOptions="actionNext"
            android:textColor="#333333"
            android:gravity="start"
            android:fontFamily="@font/gotham_book"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="text"
            android:text="@={viewModel.addres}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/landmark"
            android:textColor="#333333"

            android:fontFamily="@font/gotham_medium"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:imeOptions="actionNext"
            android:text="@={viewModel.landmark}"
            android:inputType="text"
            android:textColor="#333333"
            android:fontFamily="@font/gotham_book"
            android:background="@drawable/btn_bg"
            android:minHeight="50dp"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:text="@string/city"
            android:textColor="#333333"
            android:fontFamily="@font/gotham_medium"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textAllCaps="true"
            android:textColor="#333333"
            android:fontFamily="@font/gotham_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/textView14" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg"
            android:text="@={viewModel.city}"
            android:imeOptions="actionNext"
            android:ems="10"
            android:fontFamily="@font/gotham_book"
            android:inputType="text"
            android:textColor="#333333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg"
            android:ems="10"
            android:text="@={viewModel.state}"
            android:imeOptions="actionNext"
            android:fontFamily="@font/gotham_book"
            android:inputType="text"
            android:textColor="#333333"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/zip_code"
            android:textAllCaps="true"
            android:textColor="#333333"
            android:fontFamily="@font/gotham_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg"
            android:ems="10"
            android:text="@={viewModel.zip_code}"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:minHeight="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textAllCaps="true"
            android:fontFamily="@font/gotham_medium"
            android:textColor="#333333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toTopOf="@+id/textView17" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_bg"
            android:ems="10"
            android:text="@={viewModel.country}"
            android:imeOptions="actionDone"
            android:fontFamily="@font/gotham_book"
            android:inputType="text"
            android:minHeight="50dp"
            android:textColor="#333333"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <Button
            android:id="@+id/save_address_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/save_address"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>